# swift-lang-swift-t-jvm-engine

./: LICENSE  Makefile.am  README.md  bootstrap  configure.ac
src/: .gitignore  .tests.c.swp  Makefile.am  swift-jvm.c  swift-jvm.h  tests.c
src/.deps/: swift-jvm.Po  tests.Po
swift-jvm/: pom.xml
swift-jvm/swfit-clojure/: pom.xml
swift-jvm/swfit-clojure/src/main/java/it/isislab/swiftlang/swfit_clojure/: ClojureBindings.java  ClojureScriptEngine.java  ClojureScriptEngineFactory.java
swift-jvm/swfit-clojure/src/test/java/it/isislab/swiftlang/swfit_clojure/: Tests.java
swift-jvm/swift-groovy/: pom.xml
swift-jvm/swift-groovy/src/test/java/org/swift/groovy/: Tests.java
swift-jvm/swift-interfaces/: pom.xml
swift-jvm/swift-interfaces/src/main/java/it/isislab/swift/interfaces/: SwiftJVMScriptingEngine.java  SwiftJVMScriptingEngineNames.java  SwiftJVMScriptingInterface.java
swift-jvm/swift-interfaces/src/main/java/it/isislab/swift/interfaces/clojure/: ClojureSwiftJVMScripting.java  TestMain.java
swift-jvm/swift-interfaces/src/test/java/it/isislab/swift/interfaces/: Tests.java
swift-jvm/swift-java-jshell/: pom.xml
swift-jvm/swift-java-jshell/src/main/java/it/isislab/swiftlang/java_jshell/: JShellScriptEngine.java
swift-jvm/swift-java-jshell/src/test/java/it/isislab/swiftlang/java_jshell/: Tests.java
swift-jvm/swift-javascript/: pom.xml
swift-jvm/swift-javascript/src/main/java/it/isislab/swiftlang/javascript/: App.java
swift-jvm/swift-javascript/src/test/java/it/isislab/swiftlang/javascript/: Tests.java
swift-jvm/swift-jvm-build/: .gitignore  pom.xml
swift-jvm/swift-jvm-build/assembly/: assembly.xml
swift-jvm/swift-scala/: output.txt  pom.xml
swift-jvm/swift-scala/src/main/java/it/isislab/swift/scala/: App.java  ScalaScriptEngine.java
swift-jvm/swift-scala/src/test/java/it/isislab/swift/scala/: Tests.java
